New endpoint for getting active sessions